--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
                 <span class="no" data-background="hide">No</span>
             </div>
         </div>
-        <div class="options-box"></div>
-        <div class="options-box"></div>
+        <div class="options-box-finly"></div>
         <button class="reset-options">Reset Options</button>
 
     </div>
