--- a/index.html
+++ b/index.html
@@ -125,11 +125,10 @@
     <section class="Landing-Page">
         <div class="overlay"></div>
         <div class="introduction-text">
-            <h1>Hello,<span>my <span id="customerwelcome"></span></span></h1>
+            <h1>Hello,<span>my <span id="customerwelcome">friend</span></span></h1>
             <div>
                 <p>Looking to bring your ideas to life?</p>
-                <span>I create stunning, user-friendly websites that make your brand stand out.
-                    Let's build something amazing together!</span>
+                <span>I create stunning, easy-to-use websites that make your brand stand out. Let us build you something amazing!</span>
             </div>
         </div>
     </section>
